--- a/css/styles.css
+++ b/css/styles.css
@@ -1,45 +1,38 @@
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
-
 .body {
-    font-family: "Raleway", "Roboto", sans-serif;
-    margin: 0;
+  font-family: "Raleway", "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  }
+  li{
+    list-style: none;
+  }
+  a{
+    text-decoration: none;
   }
   .img {
     max-width: 100%;
   }
 
 /* Encabezado*/
-.header-title {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-  text-align: right;
-  letter-spacing: 0.03em;
-  color: #2196f3;
+.header{
+  margin-bottom: 106px;
 }
-.header-title-footer{
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-  text-align: right;
-  letter-spacing: 0.03em;
-  margin: 215px;
-  color: #2196f3;
+.container {
+  width: 100%;
+  max-width: calc(1600px - 430px);
+  margin: 0 auto;
 }
+
 .contenedor-principal{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 215px;
-  max-width: 1166px;
 }
 .menu{
   display: flex;
@@ -50,44 +43,44 @@
 }
 .menu-items-1{
   display: flex;
-  justify-content: space-between;
   gap: 50px;
 }
 .menu-items-2{
   display: flex;
-  justify-content: space-between;
   gap: 50px;
-  padding: 0;
 }
-li{
-  list-style: none;
-}
-a{
-  text-decoration: none;
-}
-
- .logo {
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 31px;
-text-align: right;
-color: #2196F3;
- } 
-
-.nav-1{
+.email,
+.phone{
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.02em;
-color: #212121;
-background-color: #FFFFFF;
+color: #757575;
 }
-.nav:hover,
-.nav:focus{
+
+.header-title {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  text-align: right;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+}
+.nav-1{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  }
+.nav-1:hover,
+.nav-1:focus{
   color:#2196F3
 }
 .nav:active{
@@ -106,17 +99,8 @@ background-color: #FFFFFF;
   background: #2196F3;
   cursor: pointer;
 }
-.contact{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.02em;
-color: #757575;
-}
 
-.fondo {
+.background-container{
 background: #2F303A;
 border: 1px solid #000000;
 height: 600px;
@@ -125,14 +109,39 @@ justify-content: center;
 align-items: center;
 margin-bottom: 95px;
 }
+.boton{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-title {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 900;
+font-size: 44px;
+line-height: 60px;
+text-align: center;
+color: #FFFFFF;
+}
+.btn-principal {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 30px;
+color: white
+}
 .details {
   margin-top: 95px;
 }
 .details-container {
-  max-width: calc(1600px - 430px);
-  margin: 0 auto;
   display: flex;
- gap: 30px;
+  gap: 30px;
+}
+.details-items{
+  flex-basis: 100%;
 }
 .details-item-title {
 font-family: 'Roboto';
@@ -144,14 +153,14 @@ color: #212121;
 margin-bottom: 10px;
 }
 .details-item-description {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-color: #757575;
-margin-bottom: 94px;
-}
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #757575;
+  margin-bottom: 94px;
+  }
 .servis-container {
   max-width: calc(1600px - 430px);
   margin-inline: auto;
@@ -162,24 +171,21 @@ margin-bottom: 94px;
 }
 .servis-img {
   flex-basis: 100%;
-  /* object-fit: cover; */
 }
 .servis-title {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 42px;
-text-align: center;
-color: #212121;
-margin-bottom: 55px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  color: #212121;
+  margin-bottom: 55px;
 }
 .professions {
   margin-top: 188px;
 }
 .professions-container {
-  max-width: calc(1600px - 430px);
-  margin-inline: auto;
   display: flex;
   gap: 30px;
 }
@@ -204,164 +210,87 @@ font-size: 16px;
 text-align: center;
 color: #757575;
 }
-.boton{
+.footer{
+  background-color: #2f303a;
   display: flex;
   flex-direction: column;
+}
+.footer-container{
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.footer-address{
+  display: flex;
+  flex-direction: column;
+  max-width: 231px;
+}
+.footer-logo{ 
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 31px;
+color: #2196F3;
+}
+.footer-location{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px; 
+  color: #FFFFFF;  
+}
+.footer-email,
+.footer-phone{
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+color: rgba(255, 255, 255, 0.6);
+}
+/* estilos portafolio */
+.products-header {
+  display: flex;
+  gap: 8px;
   justify-content: center;
-  align-items: center;
+  margin-bottom: 50px;
 }
-.parrafos{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap:30px ;
-
+.products-items {
+   display: flex;
+   flex-grow: 1;
+   margin-left: 142px;
+   flex-wrap: wrap;
+   gap: 30px;
+   
 }
-.images{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  gap: 33px;
-  margin-bottom: 94px;
+.button {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
 }
-.ordenamiento{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  gap: 30px;
-  margin-bottom: 94px;
+.products-title {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 18px;
+  color: #212121;
 }
-.fondo-1{
-  background: #2F303A;
-  height: 252px;
+.products-subtitle {
+  font-family:'Roboto';
+  font-weight: 400;
+  font-size: 16px;
+  color: #757575;
 }
-.ordenamiento-1{
-  display: flex;
-  flex-direction: column;
-  margin-left: 215px;
-  
+.products-img {
+  height: 375px;
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
+    1px 4px 6px rgb(0 0 0 / 16%);
 }
-.titulo{
-  display: flex;
-  flex-direction:row;
-  justify-content: flex-start;
-  margin-left: 215px;
-  margin-bottom: 94px;
+.products-container {
+  margin-bottom: 82px;
 }
-
-.main-title {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 900;
-font-size: 44px;
-line-height: 60px;
-text-align: center;
-color: #FFFFFF;
-}
-.btn-principal {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 30px;
-color: white
-}
-
-.subtittles {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
-color: #212121;
-}
-.text{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-letter-spacing: 0.03em;
-color: #757575;
-}
-.subsection {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 42px;
-text-align: center;
-letter-spacing: 0.03em;
-color: #212121;
-}
-.names {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 19px;
-letter-spacing: 0.03em;
-color: #212121;
-}
-.definition {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 19px;
-letter-spacing: 0.03em;
-color: #757575;
-}
-.location {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-letter-spacing: 0.03em;
-color: #FFFFFF;
-}
-.item {
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 26px;
-letter-spacing: 0.03em;
-color: black;
-background: #2196F3;
-}
-.items{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 26px;
-letter-spacing: 0.03em;
-color: #212121;
-}
-.name-site{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 18px;
-line-height: 36px;
-letter-spacing: 0.06em;
-color: #212121;
-}
-.description{
-    font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 30px;
-letter-spacing: 0.03em;
-color: #757575;
-}
-.pointer{
-  cursor: pointer;
-}
-
-
- 
